<resources>
    <string name="app_name">KaosLab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="custom">Custom</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="content_description">null</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Add Template strings -->
    <string name="image_selected">Image selected</string>
    <string name="uploading">Uploading...</string>
    <string name="upload">Upload</string>
    <string name="rate_this_design">Rate this design</string>
    <string name="give_rating">Give Rating</string>
</resources>